# data_project_template

./: .gitignore  README.md  docker-compose.yml  init_project.sh  pyproject.toml
data/: VEND.json  create_inep_table.sql  file_to_return_fail.xlsx  produto.CSV
the_template/: .env  main.py  mkdocs.yml
the_template/config/: __init__.py
the_template/connectors/: __init__.py  api_connector.py  database_connector.py  file_connector.py
the_template/docs/: index.md  the_project.md
the_template/gx/: define_expectations.py
the_template/gx/expectations/: .ge_store_backend_id
the_template/processors/: __init__.py  data_processor.py  transform.py
the_template/tests/: test_data_quality.py
the_template/utils/: cli.py  logger.py
